asgn4/testing/yyparse.output
Terminals unused in grammar

   TOK_BLOCK
   TOK_CALL
   TOK_IFELSE
   TOK_INITDECL
   TOK_NEWARRAY
   TOK_TYPEID
   TOK_FIELD
   TOK_ROOT
   TOK_DECLID
   TOK_BINOP
   TOK_UNOP
   TOK_VARDECL
   TOK_PARAMLIST
   TOK_FUNCTION
   TOK_PROTOTYPE
   TOK_INDEX
   TOK_NEWSTRING
   TOK_RETURNVOID


State 14 conflicts: 1 shift/reduce
State 80 conflicts: 14 shift/reduce
State 102 conflicts: 14 shift/reduce
State 120 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program structdef
    3        | program function
    4        | program statement
    5        | program error '}'
    6        | program error ';'
    7        | /* empty */

    8 structdef: TOK_STRUCT TOK_IDENT '{' fdeclist '}'
    9          | TOK_STRUCT TOK_IDENT '{' '}'

   10 fdeclist: fdeclist fielddecl ';'
   11         | fielddecl ';'

   12 fielddecl: basetype TOK_ARRAY TOK_IDENT
   13          | basetype TOK_IDENT

   14 basetype: TOK_VOID
   15         | TOK_INT
   16         | TOK_CHAR
   17         | TOK_STRING
   18         | TOK_IDENT

   19 function: identdecl '(' idecllist ')' block
   20         | identdecl '(' idecllist ')' ';'
   21         | identdecl '(' ')' block
   22         | identdecl '(' ')' ';'

   23 idecllist: idecllist ',' identdecl
   24          | identdecl

   25 identdecl: basetype TOK_ARRAY TOK_IDENT
   26          | basetype TOK_IDENT

   27 block: '{' smtlist '}'
   28      | '{' '}'

   29 smtlist: smtlist statement
   30        | statement

   31 statement: block
   32          | vardecl
   33          | while
   34          | ifelse
   35          | return
   36          | expr ';'
   37          | ';'

   38 vardecl: identdecl '=' expr ';'

   39 while: TOK_WHILE '(' expr ')' statement

   40 ifelse: TOK_IF '(' expr ')' statement TOK_ELSE statement
   41       | TOK_IF '(' expr ')' statement

   42 return: TOK_RETURN expr ';'
   43       | TOK_RETURN ';'

   44 expr: expr binop expr
   45     | unop expr
   46     | allocator
   47     | call
   48     | '(' expr ')'
   49     | variable
   50     | constant

   51 binop: TOK_EQ
   52      | TOK_NE
   53      | TOK_LT
   54      | TOK_LE
   55      | TOK_GT
   56      | TOK_GE
   57      | '+'
   58      | '-'
   59      | '*'
   60      | '/'
   61      | '%'
   62      | '='

   63 unop: TOK_POS
   64     | TOK_NEG
   65     | '!'
   66     | TOK_NEW
   67     | TOK_ORD
   68     | TOK_CHR

   69 allocator: TOK_NEW TOK_IDENT '(' ')'
   70          | TOK_NEW TOK_STRING '(' expr ')'
   71          | TOK_NEW basetype '[' expr ']'

   72 call: TOK_IDENT '(' calllist ')'
   73     | TOK_IDENT '(' ')'

   74 calllist: calllist ',' expr
   75         | expr

   76 variable: TOK_IDENT
   77         | expr '[' expr ']'
   78         | expr '.' TOK_IDENT

   79 constant: TOK_INTCON
   80         | TOK_CHARCON
   81         | TOK_STRINGCON
   82         | TOK_NULL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 65
'%' (37) 61
'(' (40) 19 20 21 22 39 40 41 48 69 70 72 73
')' (41) 19 20 21 22 39 40 41 48 69 70 72 73
'*' (42) 59
'+' (43) 57
',' (44) 23 74
'-' (45) 58
'.' (46) 78
'/' (47) 60
';' (59) 6 10 11 20 22 36 37 38 42 43
'=' (61) 38 62
'[' (91) 71 77
']' (93) 71 77
'{' (123) 8 9 27 28
'}' (125) 5 8 9 27 28
error (256) 5 6
TOK_VOID (258) 14
TOK_CHAR (259) 16
TOK_INT (260) 15
TOK_STRING (261) 17 70
TOK_IF (262) 40 41
TOK_ELSE (263) 40
TOK_WHILE (264) 39
TOK_RETURN (265) 42 43
TOK_STRUCT (266) 8 9
TOK_NULL (267) 82
TOK_NEW (268) 66 69 70 71
TOK_ARRAY (269) 12 25
TOK_EQ (270) 51
TOK_NE (271) 52
TOK_LT (272) 53
TOK_LE (273) 54
TOK_GT (274) 55
TOK_GE (275) 56
TOK_IDENT (276) 8 9 12 13 18 25 26 69 72 73 76 78
TOK_INTCON (277) 79
TOK_CHARCON (278) 80
TOK_STRINGCON (279) 81
TOK_BLOCK (280)
TOK_CALL (281)
TOK_IFELSE (282)
TOK_INITDECL (283)
TOK_POS (284) 63
TOK_NEG (285) 64
TOK_NEWARRAY (286)
TOK_TYPEID (287)
TOK_FIELD (288)
TOK_ORD (289) 67
TOK_CHR (290) 68
TOK_ROOT (291)
TOK_DECLID (292)
TOK_BINOP (293)
TOK_UNOP (294)
TOK_VARDECL (295)
TOK_PARAMLIST (296)
TOK_FUNCTION (297)
TOK_PROTOTYPE (298)
TOK_INDEX (299)
TOK_NEWSTRING (300)
TOK_RETURNVOID (301)


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
start (64)
    on left: 1, on right: 0
program (65)
    on left: 2 3 4 5 6 7, on right: 1 2 3 4 5 6
structdef (66)
    on left: 8 9, on right: 2
fdeclist (67)
    on left: 10 11, on right: 8 10
fielddecl (68)
    on left: 12 13, on right: 10 11
basetype (69)
    on left: 14 15 16 17 18, on right: 12 13 25 26 71
function (70)
    on left: 19 20 21 22, on right: 3
idecllist (71)
    on left: 23 24, on right: 19 20 23
identdecl (72)
    on left: 25 26, on right: 19 20 21 22 23 24 38
block (73)
    on left: 27 28, on right: 19 21 31
smtlist (74)
    on left: 29 30, on right: 27 29
statement (75)
    on left: 31 32 33 34 35 36 37, on right: 4 29 30 39 40 41
vardecl (76)
    on left: 38, on right: 32
while (77)
    on left: 39, on right: 33
ifelse (78)
    on left: 40 41, on right: 34
return (79)
    on left: 42 43, on right: 35
expr (80)
    on left: 44 45 46 47 48 49 50, on right: 36 38 39 40 41 42 44 45
    48 70 71 74 75 77 78
binop (81)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62, on right: 44
unop (82)
    on left: 63 64 65 66 67 68, on right: 45
allocator (83)
    on left: 69 70 71, on right: 46
call (84)
    on left: 72 73, on right: 47
calllist (85)
    on left: 74 75, on right: 72 74
variable (86)
    on left: 76 77 78, on right: 49
constant (87)
    on left: 79 80 81 82, on right: 50


State 0

    0 $accept: . start $end

    $default  reduce using rule 7 (program)

    start    go to state 1
    program  go to state 2


State 1

    0 $accept: start . $end

    $end  shift, and go to state 3


State 2

    1 start: program .
    2 program: program . structdef
    3        | program . function
    4        | program . statement
    5        | program . error '}'
    6        | program . error ';'

    error          shift, and go to state 4
    TOK_VOID       shift, and go to state 5
    TOK_CHAR       shift, and go to state 6
    TOK_INT        shift, and go to state 7
    TOK_STRING     shift, and go to state 8
    TOK_IF         shift, and go to state 9
    TOK_WHILE      shift, and go to state 10
    TOK_RETURN     shift, and go to state 11
    TOK_STRUCT     shift, and go to state 12
    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 15
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    TOK_POS        shift, and go to state 19
    TOK_NEG        shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '!'            shift, and go to state 23
    '('            shift, and go to state 24
    ';'            shift, and go to state 25
    '{'            shift, and go to state 26

    $end  reduce using rule 1 (start)

    structdef  go to state 27
    basetype   go to state 28
    function   go to state 29
    identdecl  go to state 30
    block      go to state 31
    statement  go to state 32
    vardecl    go to state 33
    while      go to state 34
    ifelse     go to state 35
    return     go to state 36
    expr       go to state 37
    unop       go to state 38
    allocator  go to state 39
    call       go to state 40
    variable   go to state 41
    constant   go to state 42


State 3

    0 $accept: start $end .

    $default  accept


State 4

    5 program: program error . '}'
    6        | program error . ';'

    '}'  shift, and go to state 43
    ';'  shift, and go to state 44


State 5

   14 basetype: TOK_VOID .

    $default  reduce using rule 14 (basetype)


State 6

   16 basetype: TOK_CHAR .

    $default  reduce using rule 16 (basetype)


State 7

   15 basetype: TOK_INT .

    $default  reduce using rule 15 (basetype)


State 8

   17 basetype: TOK_STRING .

    $default  reduce using rule 17 (basetype)


State 9

   40 ifelse: TOK_IF . '(' expr ')' statement TOK_ELSE statement
   41       | TOK_IF . '(' expr ')' statement

    '('  shift, and go to state 45


State 10

   39 while: TOK_WHILE . '(' expr ')' statement

    '('  shift, and go to state 46


State 11

   42 return: TOK_RETURN . expr ';'
   43       | TOK_RETURN . ';'

    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 47
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    TOK_POS        shift, and go to state 19
    TOK_NEG        shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '!'            shift, and go to state 23
    '('            shift, and go to state 24
    ';'            shift, and go to state 48

    expr       go to state 49
    unop       go to state 38
    allocator  go to state 39
    call       go to state 40
    variable   go to state 41
    constant   go to state 42


State 12

    8 structdef: TOK_STRUCT . TOK_IDENT '{' fdeclist '}'
    9          | TOK_STRUCT . TOK_IDENT '{' '}'

    TOK_IDENT  shift, and go to state 50


State 13

   82 constant: TOK_NULL .

    $default  reduce using rule 82 (constant)


State 14

   66 unop: TOK_NEW .
   69 allocator: TOK_NEW . TOK_IDENT '(' ')'
   70          | TOK_NEW . TOK_STRING '(' expr ')'
   71          | TOK_NEW . basetype '[' expr ']'

    TOK_VOID    shift, and go to state 5
    TOK_CHAR    shift, and go to state 6
    TOK_INT     shift, and go to state 7
    TOK_STRING  shift, and go to state 51
    TOK_IDENT   shift, and go to state 52

    TOK_IDENT  [reduce using rule 66 (unop)]
    $default   reduce using rule 66 (unop)

    basetype  go to state 53


State 15

   18 basetype: TOK_IDENT .
   72 call: TOK_IDENT . '(' calllist ')'
   73     | TOK_IDENT . '(' ')'
   76 variable: TOK_IDENT .

    '('  shift, and go to state 54

    TOK_ARRAY  reduce using rule 18 (basetype)
    TOK_IDENT  reduce using rule 18 (basetype)
    $default   reduce using rule 76 (variable)


State 16

   79 constant: TOK_INTCON .

    $default  reduce using rule 79 (constant)


State 17

   80 constant: TOK_CHARCON .

    $default  reduce using rule 80 (constant)


State 18

   81 constant: TOK_STRINGCON .

    $default  reduce using rule 81 (constant)


State 19

   63 unop: TOK_POS .

    $default  reduce using rule 63 (unop)


State 20

   64 unop: TOK_NEG .

    $default  reduce using rule 64 (unop)


State 21

   67 unop: TOK_ORD .

    $default  reduce using rule 67 (unop)


State 22

   68 unop: TOK_CHR .

    $default  reduce using rule 68 (unop)


State 23

   65 unop: '!' .

    $default  reduce using rule 65 (unop)


State 24

   48 expr: '(' . expr ')'

    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 47
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    TOK_POS        shift, and go to state 19
    TOK_NEG        shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '!'            shift, and go to state 23
    '('            shift, and go to state 24

    expr       go to state 55
    unop       go to state 38
    allocator  go to state 39
    call       go to state 40
    variable   go to state 41
    constant   go to state 42


State 25

   37 statement: ';' .

    $default  reduce using rule 37 (statement)


State 26

   27 block: '{' . smtlist '}'
   28      | '{' . '}'

    TOK_VOID       shift, and go to state 5
    TOK_CHAR       shift, and go to state 6
    TOK_INT        shift, and go to state 7
    TOK_STRING     shift, and go to state 8
    TOK_IF         shift, and go to state 9
    TOK_WHILE      shift, and go to state 10
    TOK_RETURN     shift, and go to state 11
    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 15
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    TOK_POS        shift, and go to state 19
    TOK_NEG        shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '!'            shift, and go to state 23
    '('            shift, and go to state 24
    '}'            shift, and go to state 56
    ';'            shift, and go to state 25
    '{'            shift, and go to state 26

    basetype   go to state 28
    identdecl  go to state 57
    block      go to state 31
    smtlist    go to state 58
    statement  go to state 59
    vardecl    go to state 33
    while      go to state 34
    ifelse     go to state 35
    return     go to state 36
    expr       go to state 37
    unop       go to state 38
    allocator  go to state 39
    call       go to state 40
    variable   go to state 41
    constant   go to state 42


State 27

    2 program: program structdef .

    $default  reduce using rule 2 (program)


State 28

   25 identdecl: basetype . TOK_ARRAY TOK_IDENT
   26          | basetype . TOK_IDENT

    TOK_ARRAY  shift, and go to state 60
    TOK_IDENT  shift, and go to state 61


State 29

    3 program: program function .

    $default  reduce using rule 3 (program)


State 30

   19 function: identdecl . '(' idecllist ')' block
   20         | identdecl . '(' idecllist ')' ';'
   21         | identdecl . '(' ')' block
   22         | identdecl . '(' ')' ';'
   38 vardecl: identdecl . '=' expr ';'

    '='  shift, and go to state 62
    '('  shift, and go to state 63


State 31

   31 statement: block .

    $default  reduce using rule 31 (statement)


State 32

    4 program: program statement .

    $default  reduce using rule 4 (program)


State 33

   32 statement: vardecl .

    $default  reduce using rule 32 (statement)


State 34

   33 statement: while .

    $default  reduce using rule 33 (statement)


State 35

   34 statement: ifelse .

    $default  reduce using rule 34 (statement)


State 36

   35 statement: return .

    $default  reduce using rule 35 (statement)


State 37

   36 statement: expr . ';'
   44 expr: expr . binop expr
   77 variable: expr . '[' expr ']'
   78         | expr . '.' TOK_IDENT

    TOK_EQ  shift, and go to state 64
    TOK_NE  shift, and go to state 65
    TOK_LT  shift, and go to state 66
    TOK_LE  shift, and go to state 67
    TOK_GT  shift, and go to state 68
    TOK_GE  shift, and go to state 69
    '='     shift, and go to state 70
    '+'     shift, and go to state 71
    '-'     shift, and go to state 72
    '*'     shift, and go to state 73
    '/'     shift, and go to state 74
    '%'     shift, and go to state 75
    '['     shift, and go to state 76
    '.'     shift, and go to state 77
    ';'     shift, and go to state 78

    binop  go to state 79


State 38

   45 expr: unop . expr

    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 47
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    TOK_POS        shift, and go to state 19
    TOK_NEG        shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '!'            shift, and go to state 23
    '('            shift, and go to state 24

    expr       go to state 80
    unop       go to state 38
    allocator  go to state 39
    call       go to state 40
    variable   go to state 41
    constant   go to state 42


State 39

   46 expr: allocator .

    $default  reduce using rule 46 (expr)


State 40

   47 expr: call .

    $default  reduce using rule 47 (expr)


State 41

   49 expr: variable .

    $default  reduce using rule 49 (expr)


State 42

   50 expr: constant .

    $default  reduce using rule 50 (expr)


State 43

    5 program: program error '}' .

    $default  reduce using rule 5 (program)


State 44

    6 program: program error ';' .

    $default  reduce using rule 6 (program)


State 45

   40 ifelse: TOK_IF '(' . expr ')' statement TOK_ELSE statement
   41       | TOK_IF '(' . expr ')' statement

    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 47
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    TOK_POS        shift, and go to state 19
    TOK_NEG        shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '!'            shift, and go to state 23
    '('            shift, and go to state 24

    expr       go to state 81
    unop       go to state 38
    allocator  go to state 39
    call       go to state 40
    variable   go to state 41
    constant   go to state 42


State 46

   39 while: TOK_WHILE '(' . expr ')' statement

    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 47
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    TOK_POS        shift, and go to state 19
    TOK_NEG        shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '!'            shift, and go to state 23
    '('            shift, and go to state 24

    expr       go to state 82
    unop       go to state 38
    allocator  go to state 39
    call       go to state 40
    variable   go to state 41
    constant   go to state 42


State 47

   72 call: TOK_IDENT . '(' calllist ')'
   73     | TOK_IDENT . '(' ')'
   76 variable: TOK_IDENT .

    '('  shift, and go to state 54

    $default  reduce using rule 76 (variable)


State 48

   43 return: TOK_RETURN ';' .

    $default  reduce using rule 43 (return)


State 49

   42 return: TOK_RETURN expr . ';'
   44 expr: expr . binop expr
   77 variable: expr . '[' expr ']'
   78         | expr . '.' TOK_IDENT

    TOK_EQ  shift, and go to state 64
    TOK_NE  shift, and go to state 65
    TOK_LT  shift, and go to state 66
    TOK_LE  shift, and go to state 67
    TOK_GT  shift, and go to state 68
    TOK_GE  shift, and go to state 69
    '='     shift, and go to state 70
    '+'     shift, and go to state 71
    '-'     shift, and go to state 72
    '*'     shift, and go to state 73
    '/'     shift, and go to state 74
    '%'     shift, and go to state 75
    '['     shift, and go to state 76
    '.'     shift, and go to state 77
    ';'     shift, and go to state 83

    binop  go to state 79


State 50

    8 structdef: TOK_STRUCT TOK_IDENT . '{' fdeclist '}'
    9          | TOK_STRUCT TOK_IDENT . '{' '}'

    '{'  shift, and go to state 84


State 51

   17 basetype: TOK_STRING .
   70 allocator: TOK_NEW TOK_STRING . '(' expr ')'

    '('  shift, and go to state 85

    $default  reduce using rule 17 (basetype)


State 52

   18 basetype: TOK_IDENT .
   69 allocator: TOK_NEW TOK_IDENT . '(' ')'

    '('  shift, and go to state 86

    $default  reduce using rule 18 (basetype)


State 53

   71 allocator: TOK_NEW basetype . '[' expr ']'

    '['  shift, and go to state 87


State 54

   72 call: TOK_IDENT '(' . calllist ')'
   73     | TOK_IDENT '(' . ')'

    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 47
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    TOK_POS        shift, and go to state 19
    TOK_NEG        shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '!'            shift, and go to state 23
    '('            shift, and go to state 24
    ')'            shift, and go to state 88

    expr       go to state 89
    unop       go to state 38
    allocator  go to state 39
    call       go to state 40
    calllist   go to state 90
    variable   go to state 41
    constant   go to state 42


State 55

   44 expr: expr . binop expr
   48     | '(' expr . ')'
   77 variable: expr . '[' expr ']'
   78         | expr . '.' TOK_IDENT

    TOK_EQ  shift, and go to state 64
    TOK_NE  shift, and go to state 65
    TOK_LT  shift, and go to state 66
    TOK_LE  shift, and go to state 67
    TOK_GT  shift, and go to state 68
    TOK_GE  shift, and go to state 69
    '='     shift, and go to state 70
    '+'     shift, and go to state 71
    '-'     shift, and go to state 72
    '*'     shift, and go to state 73
    '/'     shift, and go to state 74
    '%'     shift, and go to state 75
    '['     shift, and go to state 76
    '.'     shift, and go to state 77
    ')'     shift, and go to state 91

    binop  go to state 79


State 56

   28 block: '{' '}' .

    $default  reduce using rule 28 (block)


State 57

   38 vardecl: identdecl . '=' expr ';'

    '='  shift, and go to state 62


State 58

   27 block: '{' smtlist . '}'
   29 smtlist: smtlist . statement

    TOK_VOID       shift, and go to state 5
    TOK_CHAR       shift, and go to state 6
    TOK_INT        shift, and go to state 7
    TOK_STRING     shift, and go to state 8
    TOK_IF         shift, and go to state 9
    TOK_WHILE      shift, and go to state 10
    TOK_RETURN     shift, and go to state 11
    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 15
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    TOK_POS        shift, and go to state 19
    TOK_NEG        shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '!'            shift, and go to state 23
    '('            shift, and go to state 24
    '}'            shift, and go to state 92
    ';'            shift, and go to state 25
    '{'            shift, and go to state 26

    basetype   go to state 28
    identdecl  go to state 57
    block      go to state 31
    statement  go to state 93
    vardecl    go to state 33
    while      go to state 34
    ifelse     go to state 35
    return     go to state 36
    expr       go to state 37
    unop       go to state 38
    allocator  go to state 39
    call       go to state 40
    variable   go to state 41
    constant   go to state 42


State 59

   30 smtlist: statement .

    $default  reduce using rule 30 (smtlist)


State 60

   25 identdecl: basetype TOK_ARRAY . TOK_IDENT

    TOK_IDENT  shift, and go to state 94


State 61

   26 identdecl: basetype TOK_IDENT .

    $default  reduce using rule 26 (identdecl)


State 62

   38 vardecl: identdecl '=' . expr ';'

    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 47
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    TOK_POS        shift, and go to state 19
    TOK_NEG        shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '!'            shift, and go to state 23
    '('            shift, and go to state 24
